# AutomaticContentRecognition

./: CMakeLists.txt  LICENSE  README.md
src/: main.cpp
src/FingerPrinting/Audio/: audioFingerPrinting.cpp  audio_fingerprint.h
